# Traffic

./: .gitignore  README.md
trafficintelligence/: .hgignore  .hgtags  CHANGELOG  CMakeLists.txt  Doxyfile  LICENSE  Makefile  OpenCV.props  README  README-Win32.txt  SCOPE_DOCS  boost.props  klt.props  run-tests.sh  sqlite.props  tracking.cfg  trafficintelligence.sln  trafficintelligence.vcxproj  trajectory.props
trafficintelligence/.hg/: dirstate  hgrc  undo.desc
trafficintelligence/c/: Makefile  Motion.cpp  Parameters.cpp  cvutils.cpp  feature-based-tracking.cpp  optical-flow.cpp  test-pixels.cpp  test_feature.cpp  test_graph.cpp  track-features.cpp  utils.cpp
trafficintelligence/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  Motion_8cpp.html  Motion_8hpp.html  Motion_8hpp_source.html  Parameters_8cpp.html  Parameters_8hpp.html  Parameters_8hpp_source.html  annotated.html  base_8py.html  catch_8hpp.html  catch_8hpp_source.html  classCatch_1_1BetweenGenerator-members.html  classCatch_1_1BetweenGenerator.html  classCatch_1_1CompositeGenerator-members.html  classCatch_1_1CompositeGenerator.html  classCatch_1_1Context-members.html  classCatch_1_1Context.html  classCatch_1_1Detail_1_1Approx-members.html  classCatch_1_1Detail_1_1Approx.html  classCatch_1_1ExceptionTranslatorRegistrar-members.html  classCatch_1_1ExceptionTranslatorRegistrar.html  classCatch_1_1Expression-members.html  classCatch_1_1Expression.html  classCatch_1_1ExpressionBuilder-members.html  classCatch_1_1ExpressionBuilder.html  classCatch_1_1Internal_1_1Evaluator.html  classCatch_1_1MethodTestCase-members.html  classCatch_1_1MethodTestCase.html  classCatch_1_1NonCopyable-members.html  classCatch_1_1NonCopyable.html  classCatch_1_1Ptr-members.html  classCatch_1_1Ptr.html  classCatch_1_1ResultInfo-members.html  classCatch_1_1ResultInfo.html  classCatch_1_1ResultInfoBuilder-members.html  classCatch_1_1ResultInfoBuilder.html  classCatch_1_1SafeBool-members.html  classCatch_1_1SafeBool.html  classCatch_1_1ScopedInfo-members.html  (+471 more)
trafficintelligence/include/: Motion.hpp  Parameters.hpp  cvutils.hpp  learning.hpp  testutils.hpp  utils.hpp
trafficintelligence/latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  Motion_8cpp.tex  Motion_8hpp.tex  Parameters_8cpp.tex  Parameters_8hpp.tex  annotated.tex  base_8py.tex  catch_8hpp.tex  classCatch_1_1BetweenGenerator.tex  classCatch_1_1CompositeGenerator.tex  classCatch_1_1Context.eps  classCatch_1_1Context.tex  classCatch_1_1Detail_1_1Approx.tex  classCatch_1_1ExceptionTranslatorRegistrar.tex  classCatch_1_1Expression.tex  classCatch_1_1ExpressionBuilder.tex  classCatch_1_1Internal_1_1Evaluator.tex  classCatch_1_1MethodTestCase.eps  classCatch_1_1MethodTestCase.tex  classCatch_1_1NonCopyable.eps  classCatch_1_1NonCopyable.tex  classCatch_1_1Ptr.tex  classCatch_1_1ResultInfo.eps  classCatch_1_1ResultInfo.tex  classCatch_1_1ResultInfoBuilder.eps  classCatch_1_1ResultInfoBuilder.tex  classCatch_1_1SafeBool.tex  classCatch_1_1ScopedInfo.tex  classCatch_1_1Section.tex  classCatch_1_1StreamBufBase.eps  classCatch_1_1StreamBufBase.tex  classCatch_1_1TestCaseInfo.tex  classCatch_1_1TestSpec.tex  classCatch_1_1ValuesGenerator.tex  classColors.tex  classFeatureGraph.tex  classFeatureTrajectory.tex  classTrajectoryDBAccess.tex  classbase_1_1VideoFilenameAddable.eps  (+274 more)
trafficintelligence/python/: base.py  cvutils.py  events.py  indicators.py  metadata.py  ml.py  moving.py  objectsmoothing.py  pavement.py  poly-utils.py  prediction.py  processing.py  readme.md  requirements.txt  run-tests.sh  (+4 more)
(+496 files in other folders)
